--- a/Dynamic Programming & Greedy Algorithms/Assignment2.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/Assignment2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -407,7 +407,7 @@
     "\n",
     "    # check value given by the memo_table, start in top left corner and work to the right.\n",
     "    while i < len(a):\n",
-    "        if memo_table[(i, j)] > memo_table[(i +1, j)]:\n",
+    "        if memo_table[(i, j)] > memo_table[(i + 1, j)]:\n",
     "            string.append(a[i])\n",
     "            j = i\n",
     "        i = i + 1\n",
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -529,6 +529,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -627,12 +628,21 @@
     "\n",
     "def targetSum(S, i,  tgt):\n",
     "    # your code here\n",
-    "    \n"
+    "    \n",
+    "    # Case #1 - target was passed\n",
+    "    if tgt < 0:\n",
+    "        return float('inf')\n",
+    "    # Case #2 - element is outside the range of numbers\n",
+    "    elif i >= len(S) and tgt >= 0:\n",
+    "        return tgt\n",
+    "    # Case #3 - min between keep or add element\n",
+    "    else:\n",
+    "        return min(targetSum(S, i + 1, tgt), targetSum(S, i + 1, tgt - S[i]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -648,7 +658,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tests passed (10 points)!\n"
+     ]
+    }
+   ],
    "source": [
     "def tgtSum(tgt, S):\n",
     "    return targetSum(S, 0, tgt)\n",
@@ -705,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -729,13 +747,23 @@
     "    for j in range(tgt+1):\n",
     "        T[(k,j)] = j\n",
     "    # your code here\n",
-    "    \n",
+    "\n",
+    "    # iterate backwards through subset and determine options a & b\n",
+    "    for i in range(k - 1, -1, -1):\n",
+    "        for j in range(tgt + 1):\n",
+    "            a = T[(i + 1, j)]\n",
+    "            if j - S[i] >= 0:\n",
+    "                b = T[(i + 1, j - S[i])]\n",
+    "            else:\n",
+    "                b = float('inf')\n",
+    "            T[(i, j)] = min(a, b)\n",
+    "            print(T)\n",
     "    return T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -751,7 +779,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--test 1--\n",
+      "[1, 2, 3, 4, 5, 10] 15\n",
+      "--test 2--\n",
+      "[1, 2, 3, 4, 5, 10] 26\n",
+      "--test3--\n",
+      "[11, 23, 37, 48, 94, 152, 230, 312, 339, 413] 457\n",
+      "--test4--\n",
+      "[11, 23, 37, 48, 94, 152, 230, 312, 339, 413] 512\n",
+      "--test5--\n",
+      "[11, 23, 37, 48, 94, 152, 230, 312, 339, 413] 616\n",
+      "All tests passed (10 points)!\n"
+     ]
+    }
+   ],
    "source": [
     "def checkMemoTblTargetSum(a, tgt, expected):\n",
     "    T = memoTargetSum(a, tgt)\n",
