--- a/Dynamic Programming & Greedy Algorithms/Assignment4.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/Assignment4.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -219,14 +219,33 @@
     "    # return -1 if formula is already violated under partial_truth_assignment, i.e, at least one clause is false\n",
     "    def evaluate(self, partial_truth_assignment):\n",
     "        # your code here\n",
+    "        print(self.clauses)\n",
     "        \n",
-    "        \n",
-    "        "
+    "        #partial_truth_assignment = {}\n",
+    "        # iterate through the clauses and evaluate the elements of each clause\n",
+    "        for clause in self.clauses:\n",
+    "            checked_clauses = []\n",
+    "            for element in clause:\n",
+    "                #print(f\"Current element: {clause}, {element}\")\n",
+    "                checked_clauses.append(self.evaluate_literal(partial_truth_assignment, element))\n",
+    "                #print(f\"Checked clauses: {checked_clauses}\")\n",
+    "            # if the formula is partially satisfied we can continue evaluating. \n",
+    "            if 1 in checked_clauses:\n",
+    "                #print(\"Pass\")\n",
+    "                pass\n",
+    "            # if the partial evaluation sums to a multiple of hte length of the clause * -1 after a full clause has been processed return -1 for a false result\n",
+    "            elif sum(checked_clauses) == (len(clause) * -1):\n",
+    "                return -1\n",
+    "            # if the clauses do not equal -3 then the clause is indeterminate so return 0\n",
+    "            else:\n",
+    "                return 0\n",
+    "        # if all other tests passed we can assume the assignment is true and return 1\n",
+    "        return(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -242,7 +261,51 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-test1-\n",
+      "[[1, 2, -4], [-2, -3, 1], [-1, -2, -3]]\n",
+      "-test2-\n",
+      "[[1, 2, -4], [-2, -3, 1], [-1, -2, -3]]\n",
+      "-test3-\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "-test4-\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "-test5-\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "All tests passed: 10 points!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:7: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:12: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:18: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:23: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:28: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:7: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:12: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:18: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:23: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:28: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\1249033967.py:7: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(e1 == 1, f'Expected that f1 is satisfied by t1 but your code returns: {e1}')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\1249033967.py:12: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(e2 == 0, f'Expected that f1 is indeterminate under t2. Your code returns: {e2}')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\1249033967.py:18: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(e3 == 0, f'Expected that f2 is indeterminate under t3. Your code returns {e3}')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\1249033967.py:23: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(e4 == 1, f'Expected that f2 is satisfied by t4. Your code returns {e4}')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\1249033967.py:28: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(e5 == -1, f'Expected that f2 is violated by t5. Your code returns {e5}')\n"
+     ]
+    }
+   ],
    "source": [
     "## BEGIN TESTS\n",
     "\n",
@@ -990,7 +1053,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
