Solved problem1 part 2

--- a/Dynamic Programming & Greedy Algorithms/Assignment4.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/Assignment4.ipynb
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -445,7 +445,47 @@
     "    assert 1 <= j and j <= formula.n\n",
     "    assert j not in partial_truth_assign\n",
     "    # your code here\n",
+    "\n",
+    "    # I am using the naming conventions given in the psuedo code for ease of debugging.\n",
+    "    # Step 1 - \"try to set xj to true and evaluate the partial truth assignment\"\n",
+    "    truth_assign0 = extend_truth_assignment(partial_truth_assign, j, True)\n",
+    "    e0 = formula.evaluate(truth_assign0)\n",
+    "\n",
+    "    # Step 2 - If success then return True and the assignment\n",
+    "    if e0 == 1:\n",
+    "        return(True, truth_assign0)\n",
     "    \n",
+    "    # Step 3 - If indeterminate try to recurse\n",
+    "    if e0 == 0:\n",
+    "        if j <= formula.n - 1:\n",
+    "\n",
+    "            # Step 4 - recursively call dpll_algo\n",
+    "            (result, last_truth_assign) = dpll_algorithm(formula, truth_assign0, j + 1)\n",
+    "\n",
+    "            # Step 5 - if the test succeeds then end early and return passing result\n",
+    "            if result == True:\n",
+    "                return(True, last_truth_assign)\n",
+    "            \n",
+    "    # Step 6 - Try to set the truth assignment to False\n",
+    "    truth_assign1 = extend_truth_assignment(partial_truth_assign, j, False)\n",
+    "    e1 = formula.evaluate(truth_assign1)\n",
+    "\n",
+    "    # Step 7 - If sucess return True and the assignment\n",
+    "    if e1 == 1:\n",
+    "        return (True, truth_assign1)\n",
+    "    \n",
+    "    # Step 8 - If indeterminate try to recurse\n",
+    "    if e1 == 0:\n",
+    "        if j <= formula.n - 1:\n",
+    "\n",
+    "            # Step 9 - recursively call dpll_algo\n",
+    "            (result, last_truth_assign) = dpll_algorithm(formula, truth_assign1, j + 1)\n",
+    "\n",
+    "            # Step 10 - If the test succeeds then end early and return passing result\n",
+    "            if result == True:\n",
+    "                return(True, last_truth_assign)\n",
+    "            \n",
+    "    # Step 11 - All tests failed so return False\n",
     "    forget_var_in_truth_assign(partial_truth_assign, j)\n",
     "    return False, None\n",
     "\n",
@@ -455,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -471,7 +511,203 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- formula 1 --\n",
+      "j is 1\n",
+      "[[1, 2, -4], [-2, -3, 1], [-1, -2, -3]]\n",
+      "j is 2\n",
+      "[[1, 2, -4], [-2, -3, 1], [-1, -2, -3]]\n",
+      "j is 3\n",
+      "[[1, 2, -4], [-2, -3, 1], [-1, -2, -3]]\n",
+      "[[1, 2, -4], [-2, -3, 1], [-1, -2, -3]]\n",
+      "True {1: True, 2: True, 3: False}\n",
+      "[[1, 2, -4], [-2, -3, 1], [-1, -2, -3]]\n",
+      "-- formula 2 -- \n",
+      "j is 1\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "j is 2\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "j is 3\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "j is 4\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "j is 5\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "True {1: True, 2: True, 3: True, 4: False, 5: False}\n",
+      "[[1, 2, -5], [-4, -2, -1], [1, 3, 5], [-1, -5, -2], [1, 2, -4]]\n",
+      "--formula 3 --\n",
+      "j is 1\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 2\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 3\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 4\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 5\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 5\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 4\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 5\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 5\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 3\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 4\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 5\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 5\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 4\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 5\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "j is 5\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "[[1, 2, -5, -4], [1, 2, -5, 4], [-1], [-2, -5], [5]]\n",
+      "False None\n",
+      "--formula 4--\n",
+      "j is 1\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "j is 2\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "j is 3\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "j is 4\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "j is 5\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "j is 6\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "j is 7\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "j is 8\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "j is 9\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "j is 10\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "True {1: True, 2: True, 3: True, 4: True, 5: True, 6: True, 7: True, 8: True, 9: True, 10: False}\n",
+      "[[-1, -5, -4, 8], [1, 5, 8, 2], [2, 1, 3, 9], [-2, 4, 5, 6, -7], [-1, 2, -1, 7, 8], [2, -3, 1, 4, 9], [1, 10], [-10], [1, 5, 8, 3, 10]]\n",
+      "--formula 5--\n",
+      "j is 1\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 2\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 3\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 4\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 5\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 6\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 7\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 8\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 9\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 10\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 11\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 12\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 13\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 14\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "j is 15\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "True {1: True, 2: True, 3: True, 4: False, 5: True, 6: True, 7: True, 8: True, 9: True, 10: True, 11: False, 12: True, 13: True, 14: True, 15: True}\n",
+      "[[1, 2], [-2, -4], [3, 4], [-4, -5], [5, -6], [6, -7], [6, 7], [7, -16], [8, -9], [8, -14], [9, 10], [9, -10], [-10, -11], [10, 12], [11, 12], [13, 14], [14, -15], [15, 16]]\n",
+      "All tests passed: 20 points\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:6: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:7: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:13: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:14: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:15: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:21: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:39: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:40: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:41: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:50: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:52: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:5: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:6: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:7: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:13: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:14: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:15: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:21: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:39: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:40: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:41: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:50: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "<>:52: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:5: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(e, 'f1 should be satisfiable')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:6: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(t != None, 'does not return a truth assignment')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:7: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(f1.evaluate(t) == 1, 'Truth assignment does not evaluate to expected value of true')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:13: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(e2, 'f2 must be satisfiable')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:14: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(t2 != None, 'does not return a truth assignment')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:15: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(f2.evaluate(t2) == 1, 'Truth assignment does not evaluate to expected value of true')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:21: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(not e3, 'f3 is unsatisfiable')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:39: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(e4, 'f4 must be satisfiable')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:40: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(t4 != None, 'does not return a truth assignment')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:41: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(f4.evaluate(t4) == 1, 'Truth assignment does not evaluate to expected value of true')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:50: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(e5, 'f5 is satisfiable')\n",
+      "C:\\Users\\Ian\\AppData\\Local\\Temp\\ipykernel_10736\\948495811.py:52: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(f5.evaluate(t5) == 1, 'Truth assignment does not evaluate to expected value of true')\n"
+     ]
+    }
+   ],
    "source": [
     "print('-- formula 1 --')\n",
     "f1 = SATInstance(4, [ [ 1, 2, -4], [-2, -3, 1], [-1, -2, -3] ])\n",
