Possible solution for problem 2

--- a/Dynamic Programming & Greedy Algorithms/TakeHomeFinalC3V1.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/TakeHomeFinalC3V1.ipynb
@@ -84,6 +84,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -100,7 +101,9 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "We should sort the given list into a min heap to order the elements for future use. Starting with the smallest rod pop the value and add it to the current rod, increasing the cost by the length of the rod. REcursively iterate through the list until you have added every rod element.\n",
+    "\n",
+    "Creating any new sub-rods will not optimally add values together since each sub-rod will have a section that is counted at least 2 times."
    ]
   },
   {
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -145,12 +148,25 @@
     "\n",
     "def findOptimalJoiningCost(lengths):\n",
     "    # your code here\n",
-    "    "
+    "\n",
+    "    heapq.heapify(lengths)\n",
+    "    cost = 0\n",
+    "\n",
+    "    while lengths:\n",
+    "        rod_1 = heapq.heappop(lengths)\n",
+    "        rod_2 = heapq.heappop(lengths)\n",
+    "        #print(f\"Popping: {rod_1}, {rod_2}. lengths: {lengths}\")\n",
+    "        new_rod = rod_1 + rod_2\n",
+    "        cost += new_rod\n",
+    "        if len(lengths) == 0:\n",
+    "            return cost\n",
+    "        heapq.heappush(lengths, new_rod)\n",
+    "        #print(f\"Cost: {cost} + New rod: {new_rod} = {cost + new_rod}, {lengths}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -166,7 +182,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Test 1 --\n",
+      "42\n",
+      "-- Test 2 --\n",
+      "65\n",
+      "-- Test 3 --\n",
+      "173\n",
+      "-- Test 4 --\n",
+      "652216969\n",
+      "-- Test 5 --\n",
+      "81780799249\n",
+      "All tests passed: 15 points\n"
+     ]
+    }
+   ],
    "source": [
     "print('-- Test 1 --')\n",
     "l1 = [1, 5, 2, 4, 3, 2]\n",
@@ -260,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -281,12 +315,57 @@
     "    assert n >= 1\n",
     "    assert all(elt >= 1 and elt== int(elt) for elt in l)\n",
     "    # your code here\n",
+    "\n",
+    "    list_1 = []\n",
+    "    list_2 = []\n",
+    "    i = 0\n",
+    "\n",
+    "    heapq.heapify(l)\n",
+    "\n",
+    "    return minAbsDiff(l, i, list_1, list_2)\n",
+    "    \n",
+    "def minAbsDiff(l, i, s1, s2):\n",
+    "\n",
+    "    sum_1 = sum(s1)\n",
+    "    sum_2 = sum(s2)\n",
+    "    sum_diff = abs(sum_1 - sum_2)\n",
+    "\n",
+    "    print(f\"l: {l}, i: {i}, s1: {s1}, s2: {s2}\")\n",
+    "    print(f\"s1: {sumList(sum_1)}, s2: {sumList(sum_2)}, diff: {sum_diff}\")\n",
+    "\n",
+    "    if i >= len(l):\n",
+    "        print(\"End Computation\")\n",
+    "        return (s1, s2)\n",
+    "    \n",
+    "    if len(s1) <= 0:\n",
+    "        max_l = l.index(max(l))\n",
+    "        s1.append(max_l)\n",
+    "        #s1.append(heapq.heappop(l))\n",
+    "        return minAbsDiff(l, i, s1, s2)\n",
+    "    if len(s2) <= 0:\n",
+    "        s2.append(heapq.heappop(l))\n",
+    "        return minAbsDiff(l, i, s1, s2)\n",
+    "    \n",
+    "    new_s1 = s1\n",
+    "    new_s1.append(heapq.heappop(l))\n",
+    "    new_s2 = s2\n",
+    "    new_s2.append(heapq.heappop(l))\n",
+    "    \n",
+    "    print(f\"s1: {s1}, new_s1: {new_s1}, s2: {s2}, new_s2: {new_s2}\")\n",
+    "\n",
+    "    return min(minAbsDiff(l, i, new_s1, s2), minAbsDiff(l, i, s1, new_s2))\n",
+    "\n",
+    "def sumList(list):\n",
+    "    #print(list)\n",
+    "    if list != None:\n",
+    "        return 0\n",
+    "    return sum(list)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -302,7 +381,52 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- Test 1 --\n",
+      "l: [1, 4, 6, 8, 5, 7, 15], i: 0, s1: [], s2: []\n",
+      "s1: 0, s2: 0, diff: 0\n",
+      "l: [1, 4, 6, 8, 5, 7, 15], i: 0, s1: [6], s2: []\n",
+      "s1: 0, s2: 0, diff: 6\n",
+      "l: [4, 5, 6, 8, 15, 7], i: 0, s1: [6], s2: [1]\n",
+      "s1: 0, s2: 0, diff: 5\n",
+      "s1: [6, 4], new_s1: [6, 4], s2: [1, 5], new_s2: [1, 5]\n",
+      "l: [6, 7, 15, 8], i: 0, s1: [6, 4], s2: [1, 5]\n",
+      "s1: 0, s2: 0, diff: 4\n",
+      "s1: [6, 4, 6], new_s1: [6, 4, 6], s2: [1, 5, 7], new_s2: [1, 5, 7]\n",
+      "l: [8, 15], i: 0, s1: [6, 4, 6], s2: [1, 5, 7]\n",
+      "s1: 0, s2: 0, diff: 3\n",
+      "s1: [6, 4, 6, 8], new_s1: [6, 4, 6, 8], s2: [1, 5, 7, 15], new_s2: [1, 5, 7, 15]\n",
+      "l: [], i: 0, s1: [6, 4, 6, 8], s2: [1, 5, 7, 15]\n",
+      "s1: 0, s2: 0, diff: 4\n",
+      "End Computation\n",
+      "l: [], i: 0, s1: [6, 4, 6, 8], s2: [1, 5, 7, 15]\n",
+      "s1: 0, s2: 0, diff: 4\n",
+      "End Computation\n",
+      "l: [], i: 0, s1: [6, 4, 6, 8], s2: [1, 5, 7, 15]\n",
+      "s1: 0, s2: 0, diff: 4\n",
+      "End Computation\n",
+      "l: [], i: 0, s1: [6, 4, 6, 8], s2: [1, 5, 7, 15]\n",
+      "s1: 0, s2: 0, diff: 4\n",
+      "End Computation\n",
+      "[6, 4, 6, 8] [1, 5, 7, 15] 24 28\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Ian\\Documents\\Development\\CU-MSDS\\Dynamic Programming & Greedy Algorithms\\TakeHomeFinalC3V1.ipynb Cell 9\u001b[0m in \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Ian/Documents/Development/CU-MSDS/Dynamic%20Programming%20%26%20Greedy%20Algorithms/TakeHomeFinalC3V1.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m (l1, l2) \u001b[39m=\u001b[39m computeBestPartition(l)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Ian/Documents/Development/CU-MSDS/Dynamic%20Programming%20%26%20Greedy%20Algorithms/TakeHomeFinalC3V1.ipynb#X11sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(l1, l2, \u001b[39msum\u001b[39m(l1), \u001b[39msum\u001b[39m(l2))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Ian/Documents/Development/CU-MSDS/Dynamic%20Programming%20%26%20Greedy%20Algorithms/TakeHomeFinalC3V1.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39msum\u001b[39m(l1) \u001b[39m==\u001b[39m \u001b[39msum\u001b[39m(l2)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Ian/Documents/Development/CU-MSDS/Dynamic%20Programming%20%26%20Greedy%20Algorithms/TakeHomeFinalC3V1.ipynb#X11sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m checkIfPartition(l, l1, l2)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Ian/Documents/Development/CU-MSDS/Dynamic%20Programming%20%26%20Greedy%20Algorithms/TakeHomeFinalC3V1.ipynb#X11sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpassed.\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "def checkIfPartition(l, l1, l2):\n",
     "    assert all((elt in l1 and elt not in l2) or (elt in l2 and elt not in l1) for elt in l)\n",
@@ -609,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
