Fix assignment 2 final submission

--- a/Dynamic Programming & Greedy Algorithms/Assignment2.ipynb
+++ b/Dynamic Programming & Greedy Algorithms/Assignment2.ipynb
@@ -834,6 +834,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb918e7d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -877,6 +883,20 @@
     "    k = len(S)\n",
     "    assert tgt >= 0\n",
     "    # your code here\n",
+    "    i = 0\n",
+    "    T = memoTargetSum(S, tgt)\n",
+    "    res = []\n",
+    "    #print(T)\n",
+    "    \n",
+    "    # Case #2\n",
+    "    while i < k:\n",
+    "        cell = T[(i, tgt)]\n",
+    "        cell_below = T[(i + 1, tgt)]\n",
+    "\n",
+    "        if cell != cell_below:\n",
+    "            res.append(S[i])\n",
+    "            tgt = tgt - S[i]\n",
+    "        i += 1\n",
     "    \n",
     "    return res"
    ]
